# jukebox

./: .gitignore  Cargo.toml  Settings.toml  layout.json  package.json  pnpm-lock.yaml  settings.ron
crates/app/: Cargo.toml  main.rs
crates/app/src/: app_workspace.rs  library.rs  main.rs
crates/app/src/audio/: media_controls.rs
crates/app/src/views/: loading_ui.rs  settings_ui.rs
crates/ui/: Cargo.toml
crates/ui/src/: color_picker.rs  context_menu.rs  dropdown.rs  lib.rs  link.rs  modal.rs  notification.rs  popover.rs  progress.rs  radio.rs  skeleton.rs  slider.rs  switch.rs  table.rs
crates/ui/src/dock/: panel.rs  tab_panel.rs
crates/ui/src/input/: input.rs
crates/ui/src/scroll/: scrollbar.rs
crates/ui/src/tab/: tab.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs  pane.rs  pane_group.rs  workspace.rs
src/: audio.rs  library.rs  main.rs  ui.rs  views.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Player.svelte  Test.svelte  playstate.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/ui/: components.rs  mod.rs  styles.rs  theme.rs
src/ui/components/: button.rs
src/views/: main_ui.rs
