[workspace]
members = ["crates/app", "crates/ui", "crates/workspace"]

default-members = ["crates/app"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
ui = { path = "crates/ui" }
workspace = { path = "crates/workspace" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_macros = { git = "https://github.com/zed-industries/zed" }
windows = { version = "0.58.0", features = [
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemServices",
] }
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lofty = "0.20.0"
rodio = { version = "0.19.0" }
anyhow = "1.0.0"
toml = "0.8.12"
walkdir = "2.5.0"
parking_lot = "0.12"
